Strip out and added few sections

--- a/ajay-cv.tex
+++ b/ajay-cv.tex
@@ -28,12 +28,95 @@
 \name{Ajay Bhatia\vspace*{.1in}}
 
 \begin{resume}
+	
+\section{\sc Introduction}
+Senior Software Consultant \& Developer having more than 15 years of experience with a demonstrated history of working on complex business application and machine learning problems. Skilled in React, React Native, Flutter, Android, Java, Python, Machine Learning, Django, PHP, C++, HTML, CSS, jQuery and other modern web and mobile libraries and frameworks along servless technologies.
+	
 \section{\sc Contact Information}
 \vspace{.05in}
 \begin{tabular}{@{}p{4in}p{4in}}
 Escorts Street, Manavta Nagar, Sutehri Road & {\it Voice:}  (+91)9815233725\\
 Hoshiarpur, Punjab, INDIA 146001 & {\it E-mail:}  prof.ajaybhatia@gmail.com\\
 \end{tabular}
+
+\section{\sc Projects}
+
+\textbf{AHPS Pathshala} {\em https://play.google.com/store/apps/details?id=com.ahpshoshiarpur.pathshala}. 
+
+AHPS Pathshala is a mobile application made for the stakeholders of Academic Height Public School and Bachpan Play School. Using this app parents can monitor the progress of their ward in the academic activities, view their daily attendance, daily work done in class, view online test results of online quiz through app, important events and time table. Students can give scheduled tests, submit assigned homeworks, attend online classes, chat with their subject teachers, view notes by subject teachers, watch video notes posted by subject teachers, daily quotes, random math facts, random vocabulary with meaning and example and watch suggested videos. Teachers can post daily attendance, daily classwork, homework, video lectures, deliver online class, create tests and chat with students. 
+
+The app is developed majorly in React Native and firebase .
+
+\textbf{AHPS Pathshala Web Admin} {\em https://ahps-sap.web.app/}.
+
+AHPS Pathshala (foremly AHPS SAP) is a web-admin for AHPS Pathshala mobile app. Admin and Teachers are the members who has direct control to the application for managing various activities to be posted, administrate and manage by the schools staff, teacher and admin. The app is made using React as front-end with firebase as a backend for managing data, resources, cloud functions, hosting and push notifictions.
+
+\textbf{AHPS Pathshala Video Conferencing Platform} {\em https://pathshala.ahpshoshiarpur.com}.
+
+AHPS Pathshala Video Conferencing Platform is a self-managed and self-hosted Learning Management System (LMS) for teaching remote students online.  It offers audio/video sharing, presentations with extended whiteboard capabilities - such as a pointer, zooming and drawing - public and private chat, breakout rooms, screen sharing, integrated VoIP using FreeSWITCH, and support for presentation of PDF documents and Microsoft Office documents. It uses the browser's support for web real-time communications WebRTC to send/receive audio, video, and screen. 
+
+\textbf{AHPS Accounts} {\em https://accounts-ahps.web.app/}
+
+AHPS Accounts is an accounting web based management application for managing student fee with features like fee headers management, fine management, concession management, various fee reports - default lists, fee cards, fee history, cash management. Accounting and management for other stocks of school is work-in-progress. The app is made using React and firebase as a part of AHPS Pathshala ecosystem.
+
+
+\textbf{Emotify Dashboard \em (Work in Progess)} {\em https://www.goemotify.com/}. 
+
+Emotify Dashboard is a user reaction and engagement tool for online publishers, news websites and blogs, powered by AI. It is basically emotional intelligence for user's website. The product is owned by Emotify which has working production version which is made in RoR and PostgresSQL. The project under my development is a next release which in using React, Firebase, Apollo GraphQL server and MongoDB as a technology stack.
+
+\textbf{Emotify Comments Widget \em (Work in Progess)}
+
+Emotify Comments widget is the part of whole emotify ecosystem which is basically a commenting system for users on the stories (pages) posted. The whole project has micro footprints and is being developed using Preact, Firebase, Apollo GraphQL Server (with subscriptions) and MongoDB.
+
+\textbf{Design \& Develop} OnThisDay {\em Available on Playstore}. A history tracking app which shows various events happened on specific day ranging from births, deaths, anniverseries to all historical events. Typescript, ApolloServer, ApolloClient, web-scarping and React Native are used as main technologies.\\  
+
+ 
+\textbf{EMGTickets} {\em http://emgtickets.com/}. 
+
+EMGTickets is an ubiquitous event ticket reservation system developed for Elevated Media Group, a canadian ticket marketplace company which also manages various events across Canada and USA. Using this product user can view the various upcoming events, it's SVG map, can book a seat by relocating on visual map and gets regular notifications. The app is available both on web and mobile. 
+
+The main technology stack used to develop this product is Meteor reactive framework with React and React Native as frontend.
+
+\textbf{BidMyStay} {\em https://play.google.com/store/apps/details?id=com.bidmystay}. 
+
+BidMyStay is a cross-platform mobile application for both Android and iOS. Using this app a user can book properties, villas, hotels, and other accommodations on the basis of bid placed. This product belongs to QuartetVision. This product is developed in React native with backend provided by the contract company.
+
+\textbf{GSTNext} {\em https://gstnext.herokuapp.com/}.
+
+GSTNext is a cross-platform and cloud based solution for managing GST with Inventory Management, Billing, and Accounts Management for small shops. This is a personal product made using Meteor and Blaze.
+
+\textbf{YuPlayGod Downloads (Official)} {\em http://download.yuplaygod.com/}. 
+
+YuPlayGod Downloads is a web app for maintaining various ROM builds for YU series of smartphones. This project was a part of contract with Informatics Ltd. This project is purely developed in jQuery with web scraping from their own servers without writing any API server.
+
+\textbf{YuPlayGod Developers (Official)} {\em http://developer.yuplaygod.com/}.
+
+YuPlayGod Developers is a web app for Project Highway by YU Televentures for YU smartphone developers and collaborators where they can follow the set standards laid down by YU Televentures to develop and release a ROM for their smartphones, It is like a continous integration tool for ROM and release management. The project was made in PHP using  Laravel Framework and MySQL backend.
+
+\textbf{Kesari Pane} {\em http://www.kespripane.com/}.
+
+Kesari Pane is a punjabi dictionary and search engine for the people who want to connect with each other in native language punjabi. The project is owned by NRI whois residing in USA and part of his charity programme towards punajbi and sikh literature. The project is developed in pure PHP with MySQL. 
+
+\textbf{TPEngine} {\em http://tpengine.com/} 
+
+TPEngine is the web application for handling and implementing Fuzzy Cognitive Maps for real-time/life scenarios. It uses The Possibility Engine API as back engine. This is fully data-driven web application made in full-stack web framework Java Server Faces 2.2. The web container and server used to deploy this web app is Glassfish. The project is developed for Thicket Labs LLC, NY as a part of UN funding project.
+
+\textbf{The Possibility Engine} 
+
+The Possibility Engine is a library for Fuzzy Cognitive Maps in Java for Thicket Labs LLC, NY as a part of TPEngine. The project is developed single handed with the inputs from Troy University Research Team, Alabama, USA.
+
+\textbf{Xtreme Kernels} 
+
+First-Ever Kernel Worldwide (Xtreme Series by screen name \textit{andiroxu} for MediaTek 6577 Based SoC Phone Brand MicroMax, Model Canvas 2, which supported Jelly Bean (4.2.x-4.3.x) with multiple features and optimizations for RAM, Camera, WiFi, File System and Battery 
+
+\textbf{Project Xtreme} 
+
+Project Xtreme - a very popular MOD for android devices which was very popular on XDA Developer Forum with screen name \textit{andeveloper}
+
+\textbf{Xtreme Booster} 
+
+Xtreme Booster, is a memory management android app for rooted devices. A very popular app on XDA with screen name \textit{andeveloper}
+
 
 \section{\sc Education}
 {\bf Punjab Technical University}, Jalandhar INDIA\\
@@ -70,38 +153,20 @@ Hoshiarpur, Punjab, INDIA 146001 & {\it E-mail:}  prof.ajaybhatia@gmail.com\\
 \vspace*{-.1in}
 
 \section{\sc Honors and Awards}
-Guest Speaker, Google Flutter, KCLIMIT, Jalandhar, 2019\\\\
-Guest Speaker, Google Flutter, KMSCITM, Dasuya, 2019\\\\
-Guest Speaker, Google Flutter, SGTBIMIT, Jalandhar, 2019\\\\
-Guest Speaker, Web \& Mobile Trends in 2019, IKGPTU, Hoshiarpur Campus, 2019\\\\
-Guest Speaker, Google Cloud Platform, SGTBIMIT, Jalandhar, 2019\\\\
+Guest Speaker, Google Flutter \& Cloud, Various Organizations, 2018-2019\\\\
 Best Contributor, Education \& Admissions, RBGI, 2019,
-Guest Speaker, Google Cloud Platform, KCLIMIT, Jalandhar, 2018\\\\
 Voter Awareness, Voter Carnival, District Adminstration, 2017\\\\
 Best Motivator, District Administration \& District Welfare, 2016\\\\
 Technology Contributor, ERP System, CT Group, Jalandhar, 2009\\\\
 B.Sc.(Information Technology) with Disctinction, 2004\\\\
-Fourth Position earned in B.Sc., (Information Technology), 2004\\\\
-First in College in Univeristy Examination, 2004\\\\
-First in College Examinations, 2003\\\\
-DAVCMC Scholarship, 2003\\\\
-First in College Examinations, 2002\\\\
-First in College Examinations, 2001\\
+First Position in Univeristy Examination, 2001-2004\\\\
 
 \section{\sc Professional Experience}
 
-%
-%{\bf Web Studios, Punjab}
-%{\em CTO} \hfill {\bf April, 2016 - Current}
-%
-%{\bf Om Infotech, Punjab}
-%{\em CTO \& Partner} \hfill {\bf April, 2016 - Current}
+{\bf Software Consultant \& Freelancer} \hfill {\bf August, 2004 - Current}
 
 {\bf Google, INDIA}
 {\em Google Community Lead} \hfill {\bf September, 2019 - Present}
-
-{\bf Vaibhav Associates \& Lets Play Coding, INDIA}
-{\em CTO} \hfill {\bf January, 2017 - Present}
 
 {\bf Google, INDIA}
 {\em Google Cloud Platform Facilitator} \hfill {\bf January, 2019 - August, 2019}
@@ -113,30 +178,9 @@ First in College Examinations, 2001\\
 {\em Technical Consultant} \hfill {\bf June, 2016 - December, 2017}\\
 Consultation of various internals of development in Mobile and Web apps like {\em http://download.yuplaygod.com} and {\em http://developer.yuplaygod.com}
 
-{\bf Tri Infotech, Punjab}
-{\em CEO} \hfill {\bf July, 2016 - January, 2018}
-
-{\bf Career Escorts, India}
-{\em CTO} \hfill {\bf July, 2017 - January, 2018}
-
 {\bf Thicket Labs LLC, 67 West Street Brooklyn, NY 11222}
 {\em Senior Software Developer \& Project Manager} \hfill {\bf May, 2014 - March 2016}\\
 Designed and Developed {\em The Possibilty Engine} - A comprehensive solution to manage human complexity
-
-{\bf Freelancer (Software Project Management \& Development)} \hfill {\bf August, 2004 - Current}
-
-\section{\sc Academic Experience}
-{\bf Rayat Bahra Institute of Management}, Hoshiarpur, Punjab INDIA
-
-\vspace{-.3cm}
-{\em Head \& Associate Professor, Department of Computer Applications} \hfill {\bf July, 2010 - present}\\
-Administration, Head of Department, Mentoring, Motivator, Technology Advisor, Teaching graduate and postgraduate courses in IT
-
-{\bf CT Institute of Management \& IT}, Jalandhar, Punjab INDIA
-
-\vspace{-.3cm}
-{\em Assistant Professor} \hfill {\bf March, 2008 - July, 2010}\\
-Taught graduate and postgraduate courses in IT
 
 \section{\sc Research Interests}
 Android Platform, Medical Informatics, Decision making, Mathematical modelling, Fuzzy systems, Optimization techniques, Linux Kernel tunning and optimization
@@ -144,13 +188,7 @@ Android Platform, Medical Informatics, Decision making, Mathematical modelling, 
 \section{\sc Refereed Articles}
 Singh, R., Singh, R., Bhatia, A. 2018. \emph{Sentiment analysis using machine learning techniques to predict outbreaks and epidemics}, International Journal of Advanced Science and Research, 3(2), pp 19-24.
 
-Bhatia, A., Singh, R. 2012. \emph{Using Bayesian Network as Decision making system tool for deciding treatment plan for Dental caries}, Journal of Academic and Industrial Research, 2(2), pp 119-122.\\
-
-Bhatia, A., Singh, R. 2012. \emph{Backpropagation Multilayer Feedforward Neural Network for deciding treatment for broken Tooth}, Journal of Academic and Industrial Research, 2(2), pp 93-96.
-
 Mago, V.K., Mago, A., Bhatia, A., Bhatia, N. 2012. \emph{Clinical Decision Support System for Dental Treatment},  Journal of Computational Science, 3(5), pp 254-261, Elsevier.
-
-Singh, R., Marwaha, H., Bhatia, A. 2012. \emph{The Projective Future of RFID in Indian Shopping Malls}, International Journal of Science \& Emerging Technologies with Latest Trends, 1(1), pp 70-73. 
 
 Bhatia, A., Singh, R., Mago, V.K. 2011. \emph{A Decision Making System for the Treatment of Fractured Tooth}, Journal of Computer Science, 1(2), pp 1-3.
 
@@ -167,251 +205,16 @@ Bhatia, A., Kumar S., Mago, V. K. Gradient: A User-Centric Lightweight Smartphon
 
 Bhatia, A. ; Punjab Tech. Univ., Kapurthala, India ; Mago, V. ; Singh, R. Use of soft computing techniques in medical decision making: A survey. Advances in Computing, Communications and Informatics. ICACCI 2014.  
 
-Bhatia, A., Deep, G., Singh, R. 2012. Using Back Propagation Neural Network for Sales Forecasting based on Monthly Sales. ICUTIT 2012. PCTE, Ludhiana.
 
-Bhatia, A., Deep, G., Maini, P. 2012. Cause Advertising-A Tool for Social Problems Eradications. IMCMC 2012. PCTE, Ludhiana.
-
-Singh, R., Marwaha, H., Bhatia, A. 2012. The Projective Future of RFID in Indian Shopping Malls. HR Summit 2012. KCL Institute of Management \& IT, Jalandhar. 
-
-Marwaha, H., Begowal, R., Bhatia, A. 2012. Woman: A Bread Baker and Bread Earner Using IT. RWITTT-2010. PCMSDCW, Jalandhar.
-
-\section{\sc Professional Activities}
-
-\textbf{Design \& Develop} OnThisDay {\em Available on Playstore}. A history tracking app which shows various events happened on specific day ranging from births, deaths, anniverseries to all historical events. Typescript, ApolloServer, ApolloClient, web-scarping and React Native are used as main technologies.\\  
-
-\textbf{Develop} emotify {\em https://www.goemotify.com/}. Reaction and user engagement tool for online publishers, news websites and blogs, powered by AI. It is basically EMOTIONAL INTELLIGENCE FOR YOUR WEBSITE. The product is owned by Emotify. The new avatar is in development using various cutting edge technological stacks. 
-
-\textbf{Design \& Develop} B-Buddy. A very simple mobile application to find donors around us using location proximity. The app is developed using Google Firebase and React Native. 
-
-\textbf{Design \& Develop} CoachWiz {\em Work in progress}. A multiplatform video portal publishing videos on coaching of various sports by renowned coaches nationwide using GraphQL(Apollo), Meteor, React.js and React native. 
-
-\textbf{Design, Develop \& Lead} ADMS. An e-commerce platform to sell medicinal drugs developing in Meteor Platform as backend and React/Redux as frontend.
-
-\textbf{Design \& Develop} Araman {\em https://aramancompany.in/}. A website for Araman Company which produces agricultural machineries and have client-base worldwide.
-
-\textbf{Design \& Develop} New Wave Immigration {\em http://newwaveimmigration.com/}. A website for visa immigration services working for student and professional based immigrations throughout the world.
-
-\textbf{Design \& Develop} Bookosh. A multiplatform punjabi literature sharing platform developing in GraphQL(Apollo), React.js and React native.
-
-\textbf{Designn, Develop \& Lead} Event Ticket Reservation System {\em http://emgtickets.com/}. An ubiquitous ticket reservation system for a Canadian company.
-
-\textbf{Design \& Develop} BidMyStay. Mobile applications for both Android and iOS for Booking Properties, Villas, Hotels, and other accommodations on the basis of Bid placed using React native.
-
-\textbf{Design, Develop \& Lead} GreatJobs {\em https://www.greatjobsamerica.com/}. A Job Portal for Canada based Job Consultancy company.
-
-\textbf{Design \& Develop} Gentek Power {\em https://www.gentekpowerworld.com/}. A website for Gentek Power Company which produces industrial, commercial and home gensets.
-
-\textbf{Design, Develop \& Lead} Student Tracking System. A real-time student progress tracking system. The product is under construction which spans over web and mobile domains using MERNG stack
-
-\textbf{Design, Develop \& Lead} School Bus Tracking System. A real-time school bus tracking system for our client. The product is under construction which spans over web and mobile domains with GPS and Maps solutions. We are using MERNG stack for this solution
-
-\textbf{Design, Develop \& Lead} Language Lab - An Android App for the project mentioned
-
-\textbf{Design, Develop \& Lead} Language Lab - A Web App, a voice-recognition and synthesis system with language translation on run-time using bots. The product is developed in Meteor full-stack with GraphQL, React and Mongoose. We developed our own voice-recognition and synthesis system for this product
-
-\textbf{Design, Develop \& Lead} Bachpan SAP - An Android App (Student Assessment Programme), an ERP Solution for School Management, Employees, Students and Parents. The automation based software solution is capable of managing all resources of school with more than 15 modules.
-
-\textbf{Design, Develop \& Lead} Bachpan SAP - A Web App (Student Assessment Programme), an ERP Solution for School Management, Employees, Students and Parents. The automation based software solution is capable of managing all resources of school with more than 15 modules. The product is fully developed in Meteor framework on Full-stack with mix of Blaze and React
-
-\textbf{Project Lead} https://www.ahpshoshiarpur.com/, a website in wordpress for Academic Heights Public School, Hoshiarpur
-
-\textbf{Project Lead} https://www.bachpanhoshiarpur.com/, a website in wordpress for Bachpan School, Hoshiarpur
-
-\textbf{Design, Develop \& Lead} Career Escort, an Android App made using Cordova integration technology with Meteor for Real-time APIs.
-
-\textbf{Design, Develop \& Lead} Patron Career, a real-time job portal for managing jobs, hire \& recruitment, payroll management, job time-frame management and others. The product is developed in Meteor framework using a mix of Blaze and React front-end with Mongoose as back-end
-
-\textbf{Design, Develop \& Lead} Addo, a restaurant management cross-platform application for uengage.in 
-
-\textbf{Design \& Developed} GSTNext, a cross-platform and cloud based solution for GST with Inventory Management, Billing, and Accounts Management
-
-\textbf{Developed \& Design} Optician Management System, a desktop app in Java which in use by many Opticians at my native place for managing Optical Inventory and Patients with their vision data
-
-\textbf{Developed \& Design} Prabandhan, a desktop app in Java for managing Inventory of any business and is implemented at various business houses
-
-\textbf{Developed \& Design} http://www.sgndetrust.org/, a web app in wordpress for Shri Guru Nanak Educational Trust
-
-\textbf{Developed \& Design} http://www.himtinstitute.com/, a web app in django frameworks for HIMT which also contains ERP for managing Admissions
-
-\textbf{Developed \& Design} http://www.triinfotech.in/, a web app in django and web2py Python frameworks for Tri Infotech Inc which also contains blog and Quiz app
-
-\textbf{Developed \& Design} http://playgoods.in/, an e-Commerce platform for selling Play Goods for Play Goods Inc India
-
-\textbf{Developed \& Design} YuPlayGod Downloads (Official) [http://download.yuplaygod.com/], a web app for maintaining various ROM builds for YU series of smartphones
-
-\textbf{Developed \& Design} YuPlayGod Developers (Official) [http://developer.yuplaygod.com/], a web app for Project Highway by YU Televentures
-
-\textbf{Developed \& Design} http://www.taxicabdulles.com/, a website for cab company in Dulles (US)
-
-\textbf{Developed \& Design} http://www.mrsinghphotography.com/, a web app for professional photographer
-
-\textbf{Developed \& Design} PhotoBucketStudio, a web app for sharing professional photography work
-
-\textbf{Developed \& Design} http://www.kespripane.com/, a punjabi dictionary and search engine
-
-\textbf{Developed \& Design} Xtreme Sense, an android app for collecting and syncing human activity data using different sensors to cloud
-
-\textbf{Developed \& Design} http://tpengine.com/ is the web application for handling and implementing Fuzzy Cognitive Maps for real-time/life scenarios. It uses The Possibility Engine API as back engine. This is fully data-driven web application made in full-stack web framework Java Server Faces 2.2. The web container and server used to deploy this web app is Glassfish. The project is developed for  Thicket Labs LLC, NY
-
-\textbf{Developed \& Design} The Possibility Engine, a library for Fuzzy Cognitive Maps in Java for Thicket Labs LLC, NY
-
-\textbf{Developed} Inventory \& Stock Management System for an elecronic mall in .Net Technologies
-
-\textbf{Developed \& Design} APS (Automatic Profile Selector), an android app which sense the human activity and set profiles according to the preference set for the activity
-
-\textbf{Developed \& Design} http://www.drinking.dachb.co/m, a survey web app for collecting data of Binge drinkers
-
-\textbf{Developed \& Design} http://cheal.info/, a Computational Healcare (cHeal) Lab website for Lakehead University
-
-\textbf{Developed} TECHN0VIBES 2015/2016 - an IT Club website for managing various activities and for administrative purpose in Python/web2py https://itclub.pythonanywhere.com
-
-\textbf{Developed \& Design} Xtreme Power, an android for double tap or wave proximity sensor for making screen on and off
-
-\textbf{Developed \& Administrate} Online Quiz Application in web2py/Python/HTML/CSS for RBIM, Hoshiarpur (2010-Present)
-
-\textbf{Developed \& Design} Xtreme Cam, an android app/service like Moto X's twister service which open camera 
-
-\textbf{Web Hosted/Domain} http://luxmilifestylemahilpur.com
-
-\textbf{Developed} First-Ever Kernel Worldwide (Xtreme Series by screen name \textit{andiroxu} for MediaTek 6577 Based SoC Phone Brand MicroMax, Model Canvas 2, which supported Jelly Bean (4.2.x-4.3.x) with multiple features and optimizations for RAM, Camera, WiFi, File System and Battery 
-
-\textbf{Developed} Project Xtreme - a very popular MOD for android devices which was very popular on XDA Developer Forum with screen name \textit{andeveloper}
-
-\textbf{Developed} Xtreme Booster, a memory management android app for rooted devices. A very popular app on XDA with screen name \textit{andeveloper}
-
-\textbf{Developed \& Administrate} Online Review of Examination (College Management System) in JSF/Servlets/JSTL/MySQL/Glassfish Application Server for CTIMIT, Jalandhar (2009-2010)
-
-\textbf{Developed} website using ASP.NET/C\#.NET/IIS7 for Mago Dental Clinic
-
-\textbf{Developed} website for Tech Miller, UK (Now Non-functional)
-
-\section{\sc Teaching Experience}
-
-Project Work (22 times, since 2008)
-
-Programming in C and C++ languages (19 times, since 2008)
-
-Programming in Java (14 times, since 2008)
-
-Web Designing (6 times, since 2008)
-
-Web Development using .Net (2 times, since 2008)
-
-Introduction to Computers \& IT (4 times, since 2008)
-
-Data Structure (5 times, since 2008)
-
-Digital Systems Design (3 times, since 2008)
-
-Operating System (2 times, since 2008)
-
-Computer Graphics (1 time, since 2008)
-
-Database Management System (3 times, since 2008)
-
-E-Commerce with Practical Implementation (1 times, since 2011)
-
-Given special trainings on various top notch technologies and frameworks (since 2008)
-
-Special Summer Training \& Workshop on Python/Php/Java/ES5+ (4 weeks every summers, since 2011)
-
-\section{\sc Computer Skills}
+\section{\sc Technical Skills}
 \begin{list2}
 \item Languages:  C, C++, Java, Python, Node, Ruby, MATLAB, ASP.NET, C\#.NET, Unix Shell Scripting, HTML, CSS, JavaScript, jQuery, Bootstrap, PHP, XML\\
-\item Frameworks/Libraries: React, React Native, Angular (2 Onwards), Vue.js, Meteor, Django Framework, Flask Micro-framework, Rails Framework, web2py Framework, JSF Framework, Laravel Framework, CodeIgnitor 2 Framework\\
+\item Frameworks/Libraries: React, React Native, Flutter, Angular (2 Onwards), Vue.js, Meteor, Django Framework, Flask Micro-framework, Rails Framework, web2py Framework, JSF Framework, Laravel Framework, CodeIgnitor 2 Framework\\
 \item Machine Learning: Fuzzy logic and Neural Network toolboxes in MATLAB, all major APIs in Python and Java for Neural Networks, Fuzzy logic, Fuzzy Cognitive Maps  
 \item Databases, Servers \& Applications: Mongo, MySQL, Postgres, MS-SQL Server, Apache Webserver, GlassFish Application \& Webserver, Apache, Apache Tomcat, IIS, \LaTeX, Spreadsheet, and Presentation software\\
 \item Cloud Services: DigitalOcean, Heroku, AWS, Google Cloud\\
 \item Operating Systems:  Gnu/Linux (Primary), Unix (BSD), Windows, Mac\\
 \end{list2}
-
-\newpage
-
-\section{\sc Graduate Students}
-\begin{center}
-    \begin{tabular}{ | p{3.5cm} | p{5.70cm} | l | }
-    \hline
-    \textbf{Student name} & \textbf{Organization} & \textbf{Designation}\\
-    \hline
-    Tarun Gupta & VenturePact, India & Software Engineer\\
-    \hline
-    Vishnu Singh Nair & Acusis Softwares, Banglore, India & Software Developer(ASP.NET/C\#)\\
-    \hline
-    Dheeraj Singh Thakur & Sapieo Software, Noida, India & Vignette Developer(JAVA)\\
-    \hline
-    Ravi Singh & Baba Farid College, Bathinda, India & Assistant Professor\\
-    \hline
-    Richa Puri & Guru Nanak Khalsa College, Sultanpur Lodhi, India & Assistant Professor\\
-    \hline
-	Simarjit Singh & SGTBIMIT, Jalandhar, India & Assistant Professor\\
-    \hline
-    Sumit Sehgal & Doaba College, Jalandhar, India & Assistant Professor\\
-    \hline
-    Amandeep Singh & Worked at Deftsoft Informatics. Works at Zapbuild Technologies Pvt. Ltd, Mohali, Punjab & Software Developer\\
-    \hline
-    Amandeep Singh Virdi & Cloudera University, India & Technology Consultant\\
-    \hline
-    Ankit Rajpoot & JK Technosoft Ltd., India & Senior Software Engineer\\
-    \hline
-    Kulwinder Singh Pannu & Pdssia IT Consultants(P) Ltd., Panchkula, Punjab & Web Developer\\
-    \hline
-    Kushal Sharma & Kayako Software, Jalandhar, Punjab & Subject Matter\\
-    \hline
-    Preeti Tripathi & Seasia Consulting, India & Product Consultant\\
-    \hline
-    Sandeep Verma & smartData Enterprises, Mohali, India & Senior Software Engineer\\
-    \hline
-    Shakti Sangwan & Vertex Infosoft Solutions Pvt. Ltd, India & Software Developer\\
-    \hline
-	Swati Sharma & Kapsons Solutions Pvt. Ltd, India & Software Testing Engineer\\
-    \hline    
-    Jatinder Aery & Worked at MBD Group, India. Works at Shrachi Group & Territory Sales Incharge\\
-    \hline    
-    Karan Mahajan & Enbake Solutions, Mohali, India & Android Developer\\
-    \hline
-    Megha Ahuja & Worked at NIELIT, India. Works at CGC Group, India & Software Trainer\\
-    \hline
-    Savkaran Singh & Wipro Infotech, India & Database Administrator\\
-    \hline
-    Pooja Guleria & Jarc Infotech and Seasia Infotech & Software Tester\\
-    \hline
-    Nikhil Arora & Guru Nanak Dev University College, India & Assistant Professor\\
-    \hline
-    Ravi Lamba & Evergreen Publications Pvt. Ltd., India & Software Developer\\
-    \hline
-    Shaveta Shukla & Worked at PT Pure Testing. Works at PureTesting, India & Software Tester\\
-    \hline 
-    Nitin Sharma & IBM Global Services, India & IT Consultant\\
-    \hline
-    Vipin Sharma & Gybhs Education Pvt. Ltd., Jalandhar, India & Software Developer(.NET)\\
-    \hline
-    Rohit Kalia & Nitor Infotech, Pune, India & Test Analyst\\
-    \hline
-    Ketan Bharadwaj & Tri Innovations Pvt. Ltd., Chandigarh, India & Software Developer (Android)\\
-    \hline
-    Sameer Eric Naru & Pune, India & Financial Services\\
-    \hline
-    Harminder Singh & Sebiz Infotech, Mohali (SAS Nagar), India & Software Developer (Android)\\
-    \hline
-    Manish Dhir & Accenture India, Hyderabad, India & Software Tester\\
-    \hline
-    Richa Gupta & Impinge Solutions,  Mohali (SAS Nagar), India & Impinge Solutions\\
-    \hline
-    Shivam Nayyar & TCS, Chennai, India & Software Developer\\
-    \hline
-	Hardeep Kaur & TCS, Gurugram, India & Software Developer\\
-	\hline
-	Vaihbav Anchal & T \& G Web Solutions Ltd, India & Web Developer\\
-	\hline
-	Saurab Saini & BlueJeans, Banglore, India & DevOps\\
-	\hline
-	Vikrant Chowdary & Amazon, Hyderabad, India & Logistic Manager\\
-	\hline
-	Harpreet Singh & St. Joseph School, India & Computer Teacher\\
-	\hline    
-	\end{tabular}
-
-\end{center}
 
 \end{resume}
 \end{document}
