Comment out Emotify to avoid conflict of interest with the new contractor

--- a/ajay-cv.tex
+++ b/ajay-cv.tex
@@ -59,17 +59,17 @@ AHPS Pathshala Video Conferencing Platform is a self-managed and self-hosted Lea
 
 AHPS Accounts is an accounting web based management application for managing student fee with features like fee headers management, fine management, concession management, various fee reports - default lists, fee cards, fee history, cash management. Accounting and management for other stocks of school is work-in-progress. The app is made using React and firebase as a part of AHPS Pathshala ecosystem.
 
+%\textbf{Emotify Dashboard \em (Work in Progess)} {\em https://www.goemotify.com/}. 
+%
+%Emotify Dashboard is a user reaction and engagement tool for online publishers, news websites and blogs, powered by AI. It is basically emotional intelligence for user's website. The product is owned by Emotify which has working production version which is made in RoR and PostgresSQL. The project under my development is a next release which in using React, Firebase, Apollo GraphQL server and MongoDB as a technology stack.
+%
+%\textbf{Emotify Comments Widget \em (Work in Progess)}
+%
+%Emotify Comments widget is the part of whole emotify ecosystem which is basically a commenting system for users on the stories (pages) posted. The whole project has micro footprints and is being developed using Preact, Firebase, Apollo GraphQL Server (with subscriptions) and MongoDB.
 
-\textbf{Emotify Dashboard \em (Work in Progess)} {\em https://www.goemotify.com/}. 
+\textbf{OnThisDay} {\em https://play.google.com/store/apps/details?id=com.ajaybhatia.onthisday}. 
 
-Emotify Dashboard is a user reaction and engagement tool for online publishers, news websites and blogs, powered by AI. It is basically emotional intelligence for user's website. The product is owned by Emotify which has working production version which is made in RoR and PostgresSQL. The project under my development is a next release which in using React, Firebase, Apollo GraphQL server and MongoDB as a technology stack.
-
-\textbf{Emotify Comments Widget \em (Work in Progess)}
-
-Emotify Comments widget is the part of whole emotify ecosystem which is basically a commenting system for users on the stories (pages) posted. The whole project has micro footprints and is being developed using Preact, Firebase, Apollo GraphQL Server (with subscriptions) and MongoDB.
-
-\textbf{Design \& Develop} OnThisDay {\em Available on Playstore}. A history tracking app which shows various events happened on specific day ranging from births, deaths, anniverseries to all historical events. Typescript, ApolloServer, ApolloClient, web-scarping and React Native are used as main technologies.\\  
-
+OnThisDay is a history tracking app which shows various events happened on specific day ranging from births, deaths, anniverseries to all historical events. Typescript, ApolloServer, ApolloClient, web-scarping and React Native are used as main technologies.  
  
 \textbf{EMGTickets} {\em http://emgtickets.com/}. 
 
