Added more projects

--- a/ajay-cv.tex
+++ b/ajay-cv.tex
@@ -39,7 +39,47 @@ Escorts Street, Manavta Nagar, Sutehri Road & {\it Voice:}  (+91)9815233725\\
 Hoshiarpur, Punjab, INDIA 146001 & {\it E-mail:}  prof.ajaybhatia@gmail.com\\
 \end{tabular}
 
-\section{\sc Projects}
+\section{\sc Projects} 
+
+\textbf{v-inspect-dashboard} {\em https://vinspect-app-dev.herokuapp.com}
+
+Ubiqutous solution for virtual inspections of housekeeping work of private holiday properties across USA using wearable IoT devices
+
+\textbf{v-inspect-mobile}
+	
+Ubiqutous solution for virtual inspections of housekeeping work of private holiday properties across USA using wearable IoT devices
+
+\textbf{v-inspect-server} {\em https://vinspect-server-dev.herokuapp.com/api}
+
+Ubiqutous solution for virtual inspections of housekeeping work of private holiday properties across USA using wearable IoT devices
+
+\textbf{codebase} {\em https://codebase.cc}
+
+A/B Testing clients analytical tool developed in MERGN ang Google APIs
+
+\textbf{Visory Health} {\em https://www.visoryhealth.com}
+
+Visory Health web app to search for the availability of drugs with their alternatives, for lowest price across all pharmacies which have contract with Visory Health all over US
+
+\textbf{Visory Health Mobile Apps} {\em Available in both App Stores}
+
+Visory Health mobile apps to search for the availability of drugs with their alternatives, for lowest price across all pharmacies which have contract with Visory Health all over US
+
+\textbf{CCAP}
+
+Visory Health Customer Care Admin Portal for Pharmacy Benefit Management
+
+\textbf{Syndee} {\em Available in both App Stores}
+
+Families rely on Syndee to plan and run their households - from everyday chores to once in a lifetime moments. You don't have to start with a blank sheet of paper ever again - whether it is home organization or maintenance, vehicle maintenance, childcare, celebrations, side hustles or any one of the other infinite household activities, Syndee community has a plan to get you started. Syndee community - your neighbors, friends and "home celebrities" - will help you discover projects to level up your life, and give a plan (a.k.a Syndee recipes) to help you tackle your goals. Developed using MERNGN stack.
+
+\textbf{SmartStudy CRM}
+
+Customer Relationship Management (Immigration) for SmartStudy Group
+
+\textbf{DPC: Digital Platform for Credentials (Govt. of Punjab)}
+
+Digital Platform for Credentials for Universities of Punjab
 
 \textbf{AHPS Pathshala} {\em https://play.google.com/store/apps/details?id=com.ahpshoshiarpur.pathshala}. 
 
@@ -59,13 +99,13 @@ AHPS Pathshala Video Conferencing Platform is a self-managed and self-hosted Lea
 
 AHPS Accounts is an accounting web based management application for managing student fee with features like fee headers management, fine management, concession management, various fee reports - default lists, fee cards, fee history, cash management. Accounting and management for other stocks of school is work-in-progress. The app is made using React and firebase as a part of AHPS Pathshala ecosystem.
 
-%\textbf{Emotify Dashboard \em (Work in Progess)} {\em https://www.goemotify.com/}. 
-%
-%Emotify Dashboard is a user reaction and engagement tool for online publishers, news websites and blogs, powered by AI. It is basically emotional intelligence for user's website. The product is owned by Emotify which has working production version which is made in RoR and PostgresSQL. The project under my development is a next release which in using React, Firebase, Apollo GraphQL server and MongoDB as a technology stack.
-%
-%\textbf{Emotify Comments Widget \em (Work in Progess)}
-%
-%Emotify Comments widget is the part of whole emotify ecosystem which is basically a commenting system for users on the stories (pages) posted. The whole project has micro footprints and is being developed using Preact, Firebase, Apollo GraphQL Server (with subscriptions) and MongoDB.
+\textbf{Emotify Dashboard \em (Work in Progess)} {\em https://www.goemotify.com/}. 
+
+Emotify Dashboard is a user reaction and engagement tool for online publishers, news websites and blogs, powered by AI. It is basically emotional intelligence for user's website. The product is owned by Emotify which has working production version which is made in RoR and PostgresSQL. The project under my development is a next release which in using React, Firebase, Apollo GraphQL server and MongoDB as a technology stack.
+
+\textbf{Emotify Comments Widget \em (Work in Progess)}
+
+Emotify Comments widget is the part of whole emotify ecosystem which is basically a commenting system for users on the stories (pages) posted. The whole project has micro footprints and is being developed using Preact, Firebase, Apollo GraphQL Server (with subscriptions) and MongoDB.
 
 \textbf{OnThisDay} {\em https://play.google.com/store/apps/details?id=com.ajaybhatia.onthisday}. 
 
@@ -164,6 +204,9 @@ First Position in Univeristy Examination, 2001-2004\\\\
 \section{\sc Professional Experience}
 
 {\bf Software Consultant \& Freelancer} \hfill {\bf August, 2004 - Current}
+
+{\bf Aexonic Inc, USA}
+{\em Senior Full Stack Developer - Consultant} \hfill {\bf January, 2021 - Present}
 
 {\bf Google, INDIA}
 {\em Google Community Lead} \hfill {\bf September, 2019 - Present}
