Added word resume as well

--- a/ajay-cv.tex
+++ b/ajay-cv.tex
@@ -77,6 +77,14 @@ Families rely on Syndee to plan and run their households - from everyday chores 
 
 Customer Relationship Management (Immigration) for SmartStudy Group
 
+\textbf{NimbusSmart}
+
+NimbusSmart is mobile app for CT Public School, Jalandhar. This app is developed in Flutter and .Net Technologies.
+
+\textbf{ShriBalajiSchool}
+
+The parents can connect with their school by using this app. The app is the best platform to view the announcements of notices, circular and events to be held in the school. It is a reliable and convenient way of conveying important or urgent information to parents. This app is built using Flutter
+
 \textbf{DPC: Digital Platform for Credentials (Govt. of Punjab)}
 
 Digital Platform for Credentials for Universities of Punjab
